--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "publish": "cross-env NODE_ENV=production webpack-dev-server --open --hot",
-    "build": "webpack"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +20,7 @@
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-style": "^2.0.0",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
