--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-javascript-obfuscator": "^1.1.4",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.1",
     "vue": "^2.3.2"
   },
   "devDependencies": {
@@ -21,6 +27,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "javascript-obfuscator": "^0.18.1",
     "node-style": "^2.0.0",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
@@ -31,6 +38,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.2",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-obfuscator": "^0.18.0"
   }
 }
