--- a/package.json
+++ b/package.json
@@ -5,17 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production gulp && cross-env NODE_ENV=production webpack"
   },
-  "author": "",
+  "author": "cqy",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-javascript-obfuscator": "^1.1.4",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1",
     "vue": "^2.3.2"
   },
   "devDependencies": {
@@ -26,6 +20,12 @@
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-javascript-obfuscator": "^1.1.4",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "javascript-obfuscator": "^0.18.1",
     "node-style": "^2.0.0",
