--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "vuedemo",
   "version": "1.0.0",
-  "description": "",
+  "description": "an控件库，打造自己的控件方便使用",
   "main": "index.js",
   "scripts": {
+    "gulp": "gulp",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production gulp && cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "cqy",
   "license": "ISC",
   "dependencies": {
-    "vue": "^2.3.2"
+    "vue": "^2.3.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -34,7 +36,6 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.0.3",
-    "vue-router": "^2.5.3",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.2",
     "webpack": "^2.5.1",
