--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "gulp": "gulp",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack -p --progress"
   },
   "author": "cqy",
   "license": "ISC",
